Kubernetes/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  labels:
    app: $APP_NAME
spec: 
  replicas: 2 
  selector:
    matchLabels:
      app: $APP_NAME 
  template:
    metadata:
      labels: 
        app: $APP_NAME
    spec: 
      imagePullSecrets: 
      - name: docker-authenticate-ecr
      containers:
      - name: $APP_NAME
        image: $IMAGE_NAME
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10 
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 200Mi
---

apiVersion: v1
kind: Service
metadata: 
  name: java-app-service
spec:
  selector:
    app: $APP_NAME
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
